feat: remove unused endpoints
